--- a/package.json
+++ b/package.json
@@ -4,22 +4,54 @@
   "description": "New web for codebothers company",
   "main": "cbserver.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "helmet": "^3.12.1",
-    "pug": "^2.0.3"
+    "jsonwebtoken": "^8.2.2",
+    "mongoose": "^5.1.3",
+    "nodemailer": "^4.6.5",
+    "pug": "^2.0.3",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "typescript": "^2.9.1"
   },
   "devDependencies": {
+    "@types/babel-types": "^7.0.2",
+    "@types/bcryptjs": "^2.4.1",
+    "@types/bootstrap": "^4.1.0",
+    "@types/express": "^4.11.1",
+    "@types/helmet": "0.0.37",
+    "@types/jquery": "^3.3.2",
+    "@types/jsonwebtoken": "^7.2.7",
+    "@types/mongodb": "^3.0.19",
+    "@types/mongoose": "^5.0.15",
+    "@types/morgan": "^1.7.35",
+    "@types/node": "^10.3.0",
+    "@types/nodemailer": "^4.6.0",
+    "@types/react": "^16.3.16",
+    "@types/react-dom": "^16.0.5",
+    "awesome-typescript-loader": "^5.0.0",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.3",
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.0",
     "gulp-uncss": "^1.0.6",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "source-map-loader": "^0.2.3",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack-merge": "^4.1.2"
   },
   "scripts": {
+    "gulp": "gulp",
     "sass": "sass ./src/public/scss/style.scss ./dist/public/css/style.min.css --style compressed",
     "start": "nodemon ./dist/server/cb-web.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc -w",
+    "webpack-dev": "webpack --watch --config webpack.dev.js --mode development",
+    "webpack-prod": "webpack --watch --config webpack.prod.js --mode production"
   },
   "repository": {
     "type": "git",
